# GalaxySrc

./: AndroidManifest.xml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.gradle
assets/Res/: Languages.csv
imgui/: imconfig.h  imgui-SFML.cpp
res/values/: strings.xml
src/: App.cpp  App.hpp  AppLogo.icns  AppSettings.cpp  AppSettings.hpp  CMakeLists.txt  ChunkManager.cpp  ChunkManager.hpp  ColorPicker.cpp  ColorPicker.hpp  Const.hpp  EditorUiElement.cpp  EditorUiElement.hpp  Func.hpp  Global.hpp  GlobalClock.hpp  GridLines.cpp  GridLines.hpp  ImageChunk.cpp  ImageChunk.hpp  ImageEditor.cpp  ImageEditor.hpp  ImageEditorOptions.cpp  InternalResource.cpp  InternalResource.hpp  Languages.hpp  LayerPicker.cpp  LayerPicker.hpp  Namespace.hpp  PixelSelect.cpp  PixelSelect.hpp  PopUp.cpp  PopUpState.hpp  RulerUi.cpp  RulerUi.hpp  Shortcuts.hpp  Themes.hpp  ToolPicker.cpp  ToolPicker.hpp  icon.rc  (+2 more)
src/inc/: ZTB.hpp
